minor: collect to list